feature: get list media and fix bug discount